--- a/extract.ipynb
+++ b/extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,16 +26,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,14 +56,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Access Token: BQDcwYWE1oj7kJnBZc6intgOjB3LxLREIOLY5saXOrylZfeqS3wyX8XfYZOdHva3jZE5MzkkloADA9f11WNClR9ph8i-ePlvNlHcHBVZxnv7kiBon9M\n"
+      "Error: 400 {\"error\":\"invalid_client\"}\n"
      ]
     }
    ],
@@ -85,7 +85,6 @@
     "if response.status_code == 200:\n",
     "    # Extract the access token from the response\n",
     "    access_token = response.json()['access_token']\n",
-    "    print(\"Access Token:\", access_token)\n",
     "else:\n",
     "    print(\"Error:\", response.status_code, response.text)"
    ]
